crawler http://outofmemory.cn/

--- a/crawler/package.json
+++ b/crawler/package.json
@@ -6,19 +6,21 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.7",
-    "ejs": "*",
+    "ava": "^0.22.0",
+    "cheerio": "^1.0.0-rc.2",
     "crawler": "~0.4.3",
-    "minimatch": "~2.0.4",
-    "q": "~1.2.0",
-    "lodash": "~3.6.0",
     "cron": "~1.0.9",
-    "monq": "~0.3.1",
-    "mongoose": "~4.0.1",
-    "log4js": "~0.6.22",
-    "optimist": "~0.6.1",
-    "mongoose-auto-increment": "~4.0.0",
+    "ejs": "*",
+    "express": "3.4.7",
     "gridfs-stream": "~1.1.0",
+    "lodash": "~3.6.0",
+    "log4js": "~0.6.22",
+    "minimatch": "~2.0.4",
+    "mongoose": "~4.0.1",
+    "mongoose-auto-increment": "~4.0.0",
+    "monq": "~0.3.1",
+    "optimist": "~0.6.1",
+    "q": "~1.2.0",
     "shortid": "~2.2.1"
   },
   "devDependencies": {
